--- a/style_Apteeus.css
+++ b/style_Apteeus.css
@@ -21,7 +21,7 @@ note {
 
 
 h2 {
-    color: red;
+    color: D40000; 
     margin-left: 40px;
 }
 
@@ -33,18 +33,41 @@ table {
     width: 100%;
 }
 
-th, td {
-    text-align: left;
-    padding: 8px;
-}
+tr:nth-child(odd){background-color: #f2f2f2}
 
 
 
 th {
-    background-color: #ccccff;
-    color: #4d4dff;
+    background-color: #D40000;
+    color: white;
+	text-align: left;
 }
 
+/* located in demo.css and creates a little calendar icon
+ * instead of a text link for "Choose date"
+ */
+a.dp-choose-date {
+	float: left;
+	width: 16px;
+	height: 16px;
+	padding: 0;
+	margin: 5px 3px 0;
+	display: block;
+	text-indent: -2000px;
+	overflow: hidden;
+	background: url(calendar.png) no-repeat; 
+}
+a.dp-choose-date.dp-disabled {
+	background-position: 0 -20px;
+	cursor: default;
+}
+/* makes the input field shorter once the date picker code
+ * has run (to allow space for the calendar icon
+ */
+input.dp-applied {
+	width: 140px;
+	float: left;
+}
 
 
 
